--- a/app/views/artists/_form.html.erb
+++ b/app/views/artists/_form.html.erb
@@ -3,5 +3,6 @@
   <p> <label>  Country   : </label> <%= f.text_field :country %> </p>
   <p> <label>   Genre    : </label> <%= f.text_field :genre %> </p>
   <p> <label>Introduction:</label> <%= f.text_area :introduction %> </p>
+  <p> <label>   Avatar   : </label> <%= f.file_field :avatar %> </p>
   <p> <%= f.submit "Submit", class:'submit' %> </p>
 <% end %>
