--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,4 +1,5 @@
 <% @artists.each do |f| %>
+<%= image_tag(f.avatar_url(:thumb2).to_s) if f.avatar %>
 <%= f.artistname %>
 <%= f.country %>
 <%= f.genre %>
